# bazel-poc

./: .bazelrc  .bitrise-build-cache.bazelrc.tpl  .buildbuddy-build-cache.bazelrc.tpl  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  main.go  main_test.go
.circleci/: config.yml
_scripts/: gen-build-cache-config.sh  install-bazelisk.sh
